<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:gravity="top">

        <EditText
            android:id="@+id/nombre"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="@string/nombre">
        </EditText>

        <Button
            android:id="@+id/fecha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:onClick="showDatePickerDialog" />

        <EditText
            android:id="@+id/fechavacia"
            android:layout_height="wrap_content"
            android:inputType="text|date"
            android:layout_width="wrap_content"
            android:focusable="false"
            android:clickable="false"
            android:background="@android:color/transparent">
        </EditText>


        <EditText
            android:id="@+id/telefono"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="text|phone"
            android:layout_width="fill_parent"
            android:autofillHints="@string/telefono">
        </EditText>


        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:autofillHints="@string/email">
        </EditText>

        <EditText
            android:id="@+id/descripcion"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:lines="10"
            android:layout_width="fill_parent"
            android:autofillHints="@string/descripcion">
        </EditText>


        <Button
            android:id="@+id/BtnActivityOne"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>

</RelativeLayout>